# employeeRAG

./: .dockerignore  .env.example  .gitignore  ALIYUN_DEPLOY.md  CHANGELOG.md  DEPLOY_SEALOS.md  Dockerfile  EMBEDDING_MODEL_CONFIG.md  FEATURES_P1.md  FEATURES_P2.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  aliyun-docker-deploy.md  app.py  chunker.py  config.py  conversation_manager.py  deploy-aliyun.md  deploy-docker.bat  deploy-docker.sh  deploy-sealos.bat  deploy-sealos.sh  deploy.sh  feedback_collector.py  ingest.py  ingest_enhanced.py  ingest_lite.py  ingest_llamaindex.py  metadata_tagger.py  pyproject.toml  quick-deploy.bat  quick-deploy.sh  reasoning_judge.py  requirements.txt  restart.sh  retriever.py  sealos-app.yaml  sealos-deploy.md  (+5 more)
.claude/: settings.local.json
.planning/: context-usage.json
data/: ingest_metadata.json
docs/: pdf_parser.py
skills/: .skill-rag-builder.yaml  rag-builder.md  rag_builder_skill.py
src/rag_qa/: __init__.py
